Translated lots of text.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -80,10 +80,10 @@
                         <!-- Login form -->
                         <form method="post" action="{{ path('login_check') }}" id="search">
                           <fieldset>
-                            <legend>Login</legend>
-                            <p><input type="text" class="input-text" name="_username" value="Username" id="login_username" /></p>
+                            <legend>{% trans %}Login{% endtrans %}</legend>
+                            <p><input type="text" class="input-text" name="_username" value="{% trans %}Member number{% endtrans %}" id="login_username" /></p>
                             <p><input type="password" class="input-text" name="_password" value="1234" /></p>
-                            <p><input type="submit" value="Login" class="input-submit-02" /></p>
+                            <p><input type="submit" value="{% trans %}Login{% endtrans %}" class="input-submit-02" /></p>
                           </fieldset>
                         </form>
                         {% endif %}
