--- a/src/Club/ShopBundle/Resources/views/Coupon/add.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Coupon/add.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<p>If you have a coupon, you can enter the key here, and we will add it to your cart.</p>
+<p>{% trans %}If you have a coupon, you can enter the key here, and we will add it to your cart.{% endtrans %}</p>
 
 <form method="post" action="{{ path('club_shop_coupon_add') }}">
 {% include "ClubShopBundle:Coupon:form.html.twig" %}
