--- a/src/Club/ShopBundle/Resources/views/Coupon/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Coupon/form.html.twig
@@ -1,3 +1,7 @@
-  <p>{{ form_widget(form) }}</p>
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+<fieldset>
+  <legend>{% trans %}Coupon{% endtrans %}</legend>
 
+  <p>{{ form_widget(form) }}</p>
+</fieldset>
+
+{% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
