--- a/src/Club/ShopBundle/Resources/views/Order/order_information.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/order_information.html.twig
@@ -1,28 +1,30 @@
-<h2>{% trans %}Customer{% endtrans %}</h2>
-<p>{% trans with {'%company%':order.customerAddress.companyName} %}Company: %company%{% endtrans %}<br />
-{% trans with {'%cvr%':order.customerAddress.companyName} %}CVR: {% endtrans %}<br />
-{% trans with {'%firstname%':order.customerAddress.firstName,'%lastname%':order.customerAddress.lastName} %}Name: %firstname% %lastname%{% endtrans %}<br />
-{% trans with {'%street%':order.customerAddress.street} %}Street: %street%{% endtrans %}<br />
-{% trans with {'%postal%':order.customerAddress.postalCode} %}Postal: %postal%{% endtrans %}<br />
-{% trans with {'%city%':order.customerAddress.city} %}City: %city%{% endtrans %}<br />
-{% trans with {'%country%':order.customerAddress.country} %}Country: %country%{% endtrans %}</p>
+<div class="list">
+  <h2>{% trans %}Customer{% endtrans %}</h2>
+  <p><label>{% trans %}Company{% endtrans %}</label>{{order.customerAddress.companyName }}<br />
+  <label>{% trans %}CVR{% endtrans %}</label>{{ order.customerAddress.cvr }}<br />
+  <label>{% trans %}Name{% endtrans %}</label>{{ order.customerAddress.firstName }} {{ order.customerAddress.lastName }}<br />
+  <label>{% trans %}Street{% endtrans %}</label>{{ order.customerAddress.street }}<br />
+  <label>{% trans %}Postal{% endtrans %}</label>{{ order.customerAddress.postalCode }}<br />
+  <label>{% trans %}City{% endtrans %}</label>{{ order.customerAddress.city }}<br />
+  <label>{% trans %}Country{% endtrans %}</label>{{ order.customerAddress.country }}</p>
 
-<h2>{% trans %}Shipping{% endtrans %}</h2>
-<p>{% trans with {'%company%':order.shippingAddress.companyName} %}Company: %company%{% endtrans %}<br />
-{% trans with {'%cvr%':order.shippingAddress.companyName} %}CVR: {% endtrans %}<br />
-{% trans with {'%firstname%':order.shippingAddress.firstName,'%lastname%':order.shippingAddress.lastName} %}Name: %firstname% %lastname%{% endtrans %}<br />
-{% trans with {'%street%':order.shippingAddress.street} %}Street: %street%{% endtrans %}<br />
-{% trans with {'%postal%':order.shippingAddress.postalCode} %}Postal: %postal%{% endtrans %}<br />
-{% trans with {'%city%':order.shippingAddress.city} %}City: %city%{% endtrans %}<br />
-{% trans with {'%country%':order.shippingAddress.country} %}Country: %country%{% endtrans %}</p>
-<p>{{ order.shipping }}</p>
+  <h2>{% trans %}Shipping{% endtrans %}</h2>
+  <p><label>{% trans %}Company{% endtrans %}</label>{{order.shippingAddress.companyName }}<br />
+  <label>{% trans %}CVR{% endtrans %}</label>{{ order.shippingAddress.cvr }}<br />
+  <label>{% trans %}Name{% endtrans %}</label>{{ order.shippingAddress.firstName }} {{ order.shippingAddress.lastName }}<br />
+  <label>{% trans %}Street{% endtrans %}</label>{{ order.shippingAddress.street }}<br />
+  <label>{% trans %}Postal{% endtrans %}</label>{{ order.shippingAddress.postalCode }}<br />
+  <label>{% trans %}City{% endtrans %}</label>{{ order.shippingAddress.city }}<br />
+  <label>{% trans %}Country{% endtrans %}</label>{{ order.shippingAddress.country }}</p>
+  <p>{{ order.shipping }}</p>
 
-<h2>{% trans %}Billing{% endtrans %}</h2>
-<p>{% trans with {'%company%':order.billingAddress.companyName} %}Company: %company%{% endtrans %}<br />
-{% trans with {'%cvr%':order.billingAddress.companyName} %}CVR: {% endtrans %}<br />
-{% trans with {'%firstname%':order.billingAddress.firstName,'%lastname%':order.billingAddress.lastName} %}Name: %firstname% %lastname%{% endtrans %}<br />
-{% trans with {'%street%':order.billingAddress.street} %}Street: %street%{% endtrans %}<br />
-{% trans with {'%postal%':order.billingAddress.postalCode} %}Postal: %postal%{% endtrans %}<br />
-{% trans with {'%city%':order.billingAddress.city} %}City: %city%{% endtrans %}<br />
-{% trans with {'%country%':order.billingAddress.country} %}Country: %country%{% endtrans %}</p>
-<p>{{ order.paymentMethod }}</p>
+  <h2>{% trans %}Billing{% endtrans %}</h2>
+  <p><label>{% trans %}Company{% endtrans %}</label>{{order.billingAddress.companyName }}<br />
+  <label>{% trans %}CVR{% endtrans %}</label>{{ order.billingAddress.cvr }}<br />
+  <label>{% trans %}Name{% endtrans %}</label>{{ order.billingAddress.firstName }} {{ order.billingAddress.lastName }}<br />
+  <label>{% trans %}Street{% endtrans %}</label>{{ order.billingAddress.street }}<br />
+  <label>{% trans %}Postal{% endtrans %}</label>{{ order.billingAddress.postalCode }}<br />
+  <label>{% trans %}City{% endtrans %}</label>{{ order.billingAddress.city }}<br />
+  <label>{% trans %}Country{% endtrans %}</label>{{ order.billingAddress.country }}</p>
+  <p>{{ order.paymentMethod }}</p>
+</div>
