--- a/src/Club/TaskBundle/Resources/views/Task/form.html.twig
+++ b/src/Club/TaskBundle/Resources/views/Task/form.html.twig
@@ -1,3 +1,5 @@
-  <p>{{ form_widget(form) }}</p>
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+<fieldset>
+  <legend>{% trans %}Task{% endtrans %}</legend>
 
+  <p>{{ form_widget(form) }}</p>
+</fieldset>
