Translated blog admin.

--- a/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminBlog/index.html.twig
@@ -32,7 +32,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">{% trans %}There are no blogs.{% endtrans %}</td>
+    <td colspan="5">{% trans %}There are no posts.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
