--- a/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
+{% block javascripts %}
+  {% include "ClubLayoutBundle:Default:tinymce.html.twig" %}
+{% endblock %}
+
 {% block body %}
 
 <form method="post" action="{{ path('club_event_adminevent_new') }}">
