--- a/src/Club/EventBundle/Resources/views/Event/show.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/show.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 <p class="box">
 {% if event.isAttending(user) %}
 <a href="{{ path('event_event_unattend', {'id':event.id}) }}" class="btn-delete"><span>{% trans %}Unattend{% endtrans %}</span></a>
@@ -9,6 +10,7 @@
 <a href="{{ path('event_event_attend', {'id':event.id}) }}" class="btn-create"><span>{% trans %}Attend{% endtrans %}</span></a>
 {% endif %}
 </p>
+{% endif %}
 
 <div class="box-03 event box">
 
