Removed 1234 default password in layout.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -82,7 +82,7 @@
                           <fieldset>
                             <legend>{% trans %}Login{% endtrans %}</legend>
                             <p><input type="text" class="input-text" name="_username" value="{% trans %}Member number{% endtrans %}" id="login_username" /></p>
-                            <p><input type="password" class="input-text" name="_password" value="1234" /></p>
+                            <p><input type="password" class="input-text" name="_password" /></p>
                             <p><input type="submit" value="{% trans %}Login{% endtrans %}" class="input-submit-02" /></p>
                           </fieldset>
                         </form>
