--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -16,6 +16,9 @@
   <h2>{% trans %}Attributes{% endtrans %}</h2>
   <ul>
   {% for attr in product.productAttributes %}
+    {% if attr.attribute == 'booking' %}
+    <li>{% trans %}Your subscription will give you access to use bookings.{% endtrans %}</li>
+    {% endif %}
     {% if attr.attribute == 'team' %}
     <li>{% trans %}Your subscription will give you access to use teams.{% endtrans %}</li>
     {% endif %}
