--- a/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
@@ -1,29 +1,73 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<h2>Signin</h2>
+<h2>{% trans %}Checkout{% endtrans %}</h2>
 
-<fieldset>
-  <legend>Signup</legend>
-  <p>If you do not have an account, please signup here.</p>
+<div class="col50">
+  <fieldset>
+    <legend>{% trans %}Existing customer{% endtrans %}</legend>
+    <p>{% trans %}If you already have an account, please signin here.{% endtrans %}</p>
 
-  <form method="POST" action="{{ path('club_shop_checkout_signin') }}">
-  {{ form_widget(form) }}
-  <p><input type="submit" value="signup"></p>
-  </form>
+    <form method="post" action="{{ path('login_check') }}">
+    <p><label class="req" for="_username">Username:</label><br /><input size="40" type="text" id="_username" name="_username" required="required" class="input-text" /></p>
+    <p><label class="req" for="_password">Password:</label><br /><input size="40" type="password" id="_password" name="_password" required="required" class="input-text" /></p>
+    {% include 'ClubLayoutBundle:Default:submit_button.html.twig' with {'button':'login'} %}
+    </form>
 
-</fieldset>
+  </fieldset>
+</div>
 
-<fieldset>
-  <legend>Signin</legend>
-  <p>If you already have an account, please signin here.</p>
+<div class="col50 f-right">
+  <fieldset>
+    <legend>{% trans %}New customer{% endtrans %}</legend>
+    <p>{% trans %}If you do not have an account, please enter you details here.{% endtrans %}</p>
 
-  <form method="post" action="{{ path('login_check') }}">
-  <p>Username: <input type="input" name="_username"><br />
-  Password: <input type="password" name="_password"></p>
-  <p><input type="submit" value="login"></p>
-  </form>
+    <form method="POST" action="{{ path('club_shop_checkout_signin') }}">
 
-</fieldset>
+
+  <fieldset>
+    <legend>{% trans %}Password{% endtrans %}</legend>
+
+    <p>{{ form_row(form.password) }}</p>
+  </fieldset>
+
+  <fieldset>
+    <legend>{% trans %}Personal Information{% endtrans %}</legend>
+
+    <p>{{ form_row(form.language) }}</p>
+    <p>{{ form_row(form.profile.first_name) }}</p>
+    <p>{{ form_row(form.profile.last_name) }}</p>
+    <p>{{ form_row(form.profile.gender) }}</p>
+    <p>{{ form_row(form.profile.day_of_birth) }}</p>
+  </fieldset>
+
+  <fieldset>
+    <legend>{% trans %}Address Information{% endtrans %}</legend>
+
+    <p>{{ form_row(form.profile.profile_address.street) }}</p>
+    <p>{{ form_row(form.profile.profile_address.postal_code) }}</p>
+    <p>{{ form_row(form.profile.profile_address.city) }}</p>
+    <p>{{ form_row(form.profile.profile_address.state) }}</p>
+    <p>{{ form_row(form.profile.profile_address.country) }}</p>
+  </fieldset>
+
+  <fieldset>
+    <legend>{% trans %}Email Information{% endtrans %}</legend>
+
+    <p>{{ form_row(form.profile.profile_email.email_address) }}</p>
+  </fieldset>
+
+  <fieldset>
+    <legend>{% trans %}Phone Information{% endtrans %}</legend>
+
+    <p>{{ form_row(form.profile.profile_phone.phone_number) }}</p>
+  </fieldset>
+
+  {{ form_row(form._token) }}
+
+    {% include 'ClubLayoutBundle:Default:form.html.twig' with {'button':'Sign up'} %}
+    </form>
+  </fieldset>
+</div>
 
 {% endblock %}
