--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -81,7 +81,7 @@
                         <form method="post" action="{{ path('login_check') }}" id="search">
                           <fieldset>
                             <legend>{% trans %}Login{% endtrans %}</legend>
-                            <p><input type="text" class="input-text" name="_username" value="{% trans %}Member number{% endtrans %}" id="login_username" /></p>
+                            <p><input type="text" class="input-text" name="_username" id="login_username" /></p>
                             <p><input type="password" class="input-text" name="_password" /></p>
                             <p><input type="submit" value="{% trans %}Login{% endtrans %}" class="input-submit-02" /></p>
                           </fieldset>
