Should fix IE problems with js overview.

--- a/src/Club/BookingBundle/Resources/views/Overview/table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/table.html.twig
@@ -1,7 +1,8 @@
 {% block javascripts %}
   <script>
   $(document).ready(function() {
-    var date = new Date({{ date|date('Y')}},{{ date|date('n')-1 }},{{ date|date('j') }});
+    var date = new Date();
+    date.setISO8601("{{ date|date('c')}}");
     var url = "{{ path('homepage') }}";
     var location = {{ location.id }};
     var hour_width = 120;
