--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -18,6 +18,7 @@
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.slimbox2.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.switcher.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/toggle.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/iso8601.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-ui-1.8.17.custom.min.js') }}"></script>
         <script type="text/javascript">
         $(document).ready(function(){
