--- a/src/Club/InstallerBundle/Resources/views/base.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/base.html.twig
@@ -1,5 +1,79 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="content-language" content="en" />
+        <meta name="robots" content="noindex,nofollow" />
+        <title>{% block title %}ClubMaster{% endblock %}</title>
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/reset.css') }}" /> <!-- RESET -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/main.css') }}" /> <!-- MAIN STYLE SHEET -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/2col.css') }}" title="2col" /> <!-- DEFAULT: 2 COLUMNS -->
+        <link rel="alternate stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/1col.css') }}" title="1col" /> <!-- ALTERNATE: 1 COLUMN -->
+        <!--[if lte IE 6]><link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/main-ie6.css') }}" /><![endif]--> <!-- MSIE6 -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/style.css') }}" /> <!-- GRAPHIC THEME -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
+        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery-1.7.1.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.switcher.js') }}"></script>
 
-{% block header %}<h1>{% trans %}User{% endtrans %}</h1>{% endblock %}
+        {% block stylesheets %}{% endblock %}
+        {% block javascripts %}{% endblock %}
+        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
+      </head>
+    <body>
+    <div id="main">
 
-{% block logger %}{% endblock %}
+        <!-- Tray -->
+        <div id="tray" class="box">
+
+                <p class="f-left box">
+
+                        <!-- Switcher -->
+                        <span class="f-left" id="switcher">
+                          <a href="#" rel="1col" class="styleswitch ico-col1" title="Display one column"><img src="{{ asset('bundles/clublayout/images/switcher-1col.gif') }}" alt="1 Column" /></a>
+                          <a href="#" rel="2col" class="styleswitch ico-col2" title="Display two columns"><img src="{{ asset('bundles/clublayout/images/switcher-2col.gif') }}" alt="2 Columns" /></a>
+                        </span>
+
+                        {% trans with {'%name%':'ClubMaster'} %}Project: <strong>%name%</strong>{% endtrans %}
+                </p>
+
+        </div> <!--  /tray -->
+
+        <hr class="noscreen" />
+
+        <!-- Columns -->
+        <div id="cols" class="box">
+
+                <!-- Aside (Left Column) -->
+                <div id="aside" class="box">
+
+                        <div class="padding box">
+
+                                <!-- Logo (Max. width = 200px) -->
+                                <p id="logo"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.png') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
+
+                        </div> <!-- /padding -->
+
+                </div> <!-- /aside -->
+
+                <hr class="noscreen" />
+
+                <!-- Content (Right Column) -->
+                <div id="content" class="box">
+
+                        {% block header %}<h1>ClubMaster</h1>{% endblock %}
+                        {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
+
+                        {% block body %}{% endblock %}
+                </div> <!-- /content -->
+        </div> <!-- /cols -->
+
+        <hr class="noscreen" />
+
+        <!-- Footer -->
+        <div id="footer" class="box">
+          <p class="f-left">&copy; 2011 <a href="{{ path('homepage') }}">ClubMaster</a>, All Rights Reserved &reg;</p>
+          <p class="f-right">{% render "ClubUserBundle:Misc:versionBar" %}</p>
+        </div> <!-- /footer -->
+      </div> <!-- /main -->
+    </body>
+</html>
