--- a/src/Club/InstallerBundle/Resources/views/Installer/index.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/index.html.twig
@@ -1,20 +1,20 @@
 {% extends "ClubInstallerBundle::base.html.twig" %}
 
 {% block body %}
-<h2>ClubMaster Installer</h2>
+<h2>{% trans %}ClubMaster Installation{% endtrans %}</h2>
 
-<p>This is the installer program of ClubMaster.</p>
+<p>{% trans %}This is the installer of ClubMaster.{% endtrans %}</p>
 
-<p>When you have completed the following list of steps, you are ready to start using ClubMaster.</p>
+<p>{% trans %}When you have completed the following list of steps, you are ready to start using ClubMaster.{% endtrans %}</p>
 
 <ul>
-  <li>Install database</li>
-  <li>Administrator setup</li>
-  <li>Location setup</li>
+  <li>{% trans %}Install database{% endtrans %}</li>
+  <li>{% trans %}Administrator setup{% endtrans %}</li>
+  <li>{% trans %}Location setup{% endtrans %}</li>
 </ul>
 
 <p class="box">
-  <a href="{{ path("club_installer_installer_database") }}" class="btn"><span>Start installation</span></a>
+  <a href="{{ path("club_installer_installer_database") }}" class="btn"><span>{% trans %}Start installation{% endtrans %}</span></a>
 </p>
 
 {% endblock %}
