Translated users subscription page.

--- a/src/Club/ShopBundle/Resources/views/Subscription/location_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/location_table.html.twig
@@ -1,6 +1,6 @@
-<h2>Location</h2>
+<h2>{% trans %}Location{% endtrans %}</h2>
 
-<p>This subscription is valid in the following clubs.</p>
+<p>{% trans %}This subscription is valid in the following clubs.{% endtrans %}</p>
 
 <p><ul>
 {% for location in subscription.location %}
