--- a/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/show.html.twig
@@ -2,45 +2,43 @@
 
 {% block body %}
 
-<h2>Subscription</h2>
+<h2>{% trans %}Subscription{% endtrans %}</h2>
 
 <table class="style">
   <tbody>
     <tr>
-      <th>Day bought:</th>
+      <th>{% trans %}Day bought{% endtrans %}</th>
       <td>{{ subscription.order.createdAt|club_datetime }}</td>
     </tr>
     <tr>
-      <th>Price:</th>
+      <th>{% trans %}Price{% endtrans %}</th>
       <td>{{ subscription.orderProduct.price|club_price }}</td>
     </tr>
     <tr>
-      <th>Period:</th>
+      <th>{% trans %}Period{% endtrans %}</th>
       <td>{{ subscription.startDate|club_datetime }} - {% if subscription.expireDate == '' %}Never{% else %}{{ subscription.expireDate|club_datetime }}{% endif %}</td>
     </tr>
     <tr>
-      <th>Auto renewal:</th>
+      <th>{% trans %}Auto renewal{% endtrans %}</th>
       <td>
-        {% if subscription.hasAttribute('auto_renewal') %}This subscription will automatically be renewed.
-        {% else %}This subscription will not be automatically renewed.{% endif %}
+        {% if subscription.hasAttribute('auto_renewal') %}{% trans %}This subscription will automatically be renewed.{% endtrans %}
+        {% else %}{% trans %}This subscription will not be automatically renewed.{% endtrans %}{% endif %}
       </td>
     </tr>
     <tr>
-      <th>Booking:</th>
+      <th>{% trans %}Booking{% endtrans %}</th>
       <td>
-        {% if subscription.hasAttribute('booking') %}This subscription allow you to use bookings.
-        {% else %}This subscription does not allow you to use bookings.{% endif %}
+        {% if subscription.hasAttribute('booking') %}{% trans %}This subscription allow you to use bookings.{% endtrans %}
+        {% else %}{% trans %}This subscription does not allow you to use bookings.{% endtrans %}{% endif %}
       </td>
     </tr>
-
     <tr>
-      <th>Team:</th>
+      <th>{% trans %}Team{% endtrans %}</th>
       <td>
-        {% if subscription.hasAttribute('team') %}This subscription allow you to use teams.
-        {% else %}This subscription does not allow you to use teams.{% endif %}
+        {% if subscription.hasAttribute('team') %}{% trans %}This subscription allow you to use teams.{% endtrans %}
+        {% else %}{% trans %}This subscription does not allow you to use teams.{% endtrans %}{% endif %}
       </td>
     </tr>
-
   </tbody>
 </table>
 
