Added order status management.

--- a/src/Club/ShopBundle/Resources/views/AdminOrderStatus/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrderStatus/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('admin_shop_category_edit', {'id':category.id}) }}">
+<form method="post" action="{{ path('club_shop_adminorderstatus_new') }}">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
