more minor changes.

--- a/src/Club/UserBundle/Resources/views/AdminLocation/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/index.html.twig
@@ -8,6 +8,7 @@
 
 <ul>
   <li>{{ location }}
+  {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_location_edit', {'id':location.id})} %}
   {% include "ClubLayoutBundle:Default:config_link.html.twig" with {'url':path('admin_location_config', {'id':location.id})} %}
   {% include "ClubLayoutBundle:Default:page_link.html.twig" with {'url':path('club_welcome_adminwelcome_edit', {'location_id':location.id})} %}
 
