--- a/src/Club/ShopBundle/Resources/views/Checkout/shipping.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/shipping.html.twig
@@ -1,16 +1,16 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<h2>Payment Information</h2>
+<h2>{% trans %}Payment Information{% endtrans %}</h2>
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
 
 <form method="POST" action="{{ path('shop_checkout_shipping') }}">
 <fieldset>
-  <legend>Shipping Information</legend>
+  <legend>{% trans %}Shipping Information{% endtrans %}</legend>
 
-  <p>{{ form_row(form1) }}</p>
-  <p>{{ form_row(form2) }}</p>
+  <p>{{ form_widget(form1) }}</p>
+  <p>{{ form_widget(form2) }}</p>
 
   <p><input type="submit" value="Continue" class="input-submit" /></p>
 </fieldset>
