Translate manage intervals.

--- a/src/Club/BookingBundle/Resources/views/AdminInterval/manage.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/manage.html.twig
@@ -10,37 +10,37 @@
 </fieldset>
 
 <fieldset>
-  <legend>Monday</legend>
+  <legend>{% trans %}Monday{% endtrans %}</legend>
   {{ form_widget(form.1) }}
 </fieldset>
 
 <fieldset>
-  <legend>Tuesday</legend>
+  <legend>{% trans %}Tuesday{% endtrans %}</legend>
   {{ form_widget(form.2) }}
 </fieldset>
 
 <fieldset>
-  <legend>Wednesday</legend>
+  <legend>{% trans %}Wednesday{% endtrans %}</legend>
   {{ form_widget(form.3) }}
 </fieldset>
 
 <fieldset>
-  <legend>Tursday</legend>
+  <legend>{% trans %}Tursday{% endtrans %}</legend>
   {{ form_widget(form.4) }}
 </fieldset>
 
 <fieldset>
-  <legend>Friday</legend>
+  <legend>{% trans %}Friday{% endtrans %}</legend>
   {{ form_widget(form.5) }}
 </fieldset>
 
 <fieldset>
-  <legend>Saturday</legend>
+  <legend>{% trans %}Saturday{% endtrans %}</legend>
   {{ form_widget(form.6) }}
 </fieldset>
 
 <fieldset>
-  <legend>Sunday</legend>
+  <legend>{% trans %}Sunday{% endtrans %}</legend>
   {{ form_widget(form.7) }}
 </fieldset>
 
