--- a/src/Club/MailBundle/Resources/views/Template/user_new.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/user_new.html.twig
@@ -1,11 +1,9 @@
 Welcome {{ user.profile.name }},
 
-We have just added you as a member on ClubMaster, you can now login to:
+You has just been added as a member on ClubMaster, you can logn here:
 {{ url }}
 
 Username: {{ user.memberNumber }}
-
-When you login in the system the first time, you will have to set the password.
 
 Best regards,
 ClubMaster
