Moved some header links around.

--- a/src/Club/ShopBundle/Resources/views/Order/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/index.html.twig
@@ -1,6 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
+
+{% include "ClubShopBundle:Shop:header.html.twig" %}
+
 <h2>{% trans %}Order{% endtrans %}</h2>
 
 <table class="style">
