--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -1,7 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<h3>{% trans %}Cart{% endtrans %}</h3>
+
+{% include "ClubShopBundle:Shop:header.html.twig" %}
+
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
 
 <h3>{% trans %}Order{% endtrans %}</h3>
