--- a/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
@@ -1,7 +1,8 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>{% trans %}View cart{% endtrans %}</span></a></p>
+
+{% include "ClubShopBundle:Shop:header.html.twig" %}
 
 {% if categories|length > 0 %}
 <h3>{% trans %}Categories{% endtrans %}</h3>
