--- a/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -2,12 +2,12 @@
 
 {% block body %}
 
-{% if is_granted('ROLE_ADMIN') %}
 <p class="box">
+  <a href="{{ path('club_welcome_blog_new') }}" class="btn-info"><span>{% trans %}Post blog{% endtrans %}</span></a>
+  {% if is_granted('ROLE_ADMIN') %}
   <a href="{{ path('club_dashboard_admindashboard_index') }}" class="btn-info"><span>{% trans %}Admin Dashboard{% endtrans %}</span></a>
+  {% endif %}
 </p>
-
-{% endif %}
 
 {% include "ClubDashboardBundle:Dashboard:team_table.html.twig" %}
 {% include "ClubDashboardBundle:Dashboard:order_table.html.twig" %}
